# free-antigravity

./: .env.example  .gitignore  CHANGELOG.md  GEMINI.md  README.es.md  README.md  README.pt-BR.md  README.ru.md  README.zh.md  SYNC_AKITA_PERSONA.md  auth_panel  free-antigravity.py  index.html  install.sh  mitm_proxy.py  pyproject.toml  requirements.txt
api/: routes.py
config/: __init__.py  settings.py
data/: real_models_response.json
docs/: AGENT_MASTER_INSTRUCTIONS.md  SYNC_TECHNICAL_ARCH.md  SYNC_USAGE_GUIDE.md  TECHNICAL_GUIDE.md
providers/: __init__.py  base.py  converter.py  health.py  manager.py  registry.py  token_tracker.py
providers/deepseek/: __init__.py  defaults.py
providers/gemini/: __init__.py  defaults.py
providers/groq/: __init__.py  defaults.py
providers/mistral/: __init__.py  defaults.py
providers/nvidia/: __init__.py  defaults.py
providers/ollama/: __init__.py  defaults.py
providers/openrouter/: __init__.py  defaults.py
