[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "free-antigravity"
version = "1.0.0"
description = "High-performance unified proxy designed to connect Antigravity CLI (agy) and Claude Code to any AI provider"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "httpx>=0.23.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["api", "config", "providers"]
